k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoo
  labels:
    app.kubernetes.io/name: odoo
    app.kubernetes.io/part-of: odoo-stack
